2008-09-14  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h: Do not include <myopt.h>.
	(standard_startup): Do not take argc and argv as arguments, and do
	not call myopt. Fix all callers.
	* lib/myopt-util.c: Include <myopt.h>.
	* dpkg-deb/build.c: Likewise.
	* dpkg-split/info.c: Likewise.
	* dpkg-split/join.c: Likewise.
	* dpkg-split/queue.c: Likewise.
	* src/select.c: Likewise.
	* dpkg-deb/main.c (main): Call myopt directly.
	* dpkg-split/main.c: Likewise.
	* src/main.c: Likewise.
	* src/query.c: Likewise.
	* src/trigcmd.c: Likewise.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (standard_shutdown): Remove unused freemem argument,
	and do not call nffreeall. Fix all callers.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h: Move <stdlib.h> inclusion to ...
	* dselect/pkglist.cc: ... here.
	* lib/database.c: Likewise.
	* lib/dump.c: Likewise.
	* lib/parse.c: Likewise.
	* lib/parsehelp.c: Likewise.
	* lib/triglib.c: Likewise.
	* src/filesdb.c: Likewise.
	* src/help.c: Likewise.
	* src/select.c: Likewise.
	* src/trigproc.c: Likewise.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_FUNCS): Move 'vsnprintf', 'snprintf',
	'strerror', 'strsignal', 'scandir', 'alphasort' and 'unsetenv' to ...
	(DPKG_CHECK_COMPAT_FUNCS): ... here.
	* lib/Makefile.am (libdpkg_a_SOURCES): Remove 'compat.c'.
	* lib/dpkg.h (strerror, strsignal, scandir, alphasort, unsetenv)
	(offsetof, strtoul, va_copy, WCOREDUMP): Move declarations to ...
	* libcompat/compat.h: ... here.
	* libcompat/Makefile.am (libcompat_a_SOURCES): Add 'strerror.c',
	'strsignal.c', 'snprintf.c', 'vsnprintf.c', 'alphasort.c',
	'scandir.c' and 'unsetenv.c'.
	* po/POTFILES.in: Remove 'lib/compat.c'.
	* lib/compat.c: Split into ...
	* libcompat/alphasort.c: ... here. New file.
	* libcompat/scandir.c: Likewise.
	* libcompat/snprintf.c: Likewise.
	* libcompat/strerror.c: Likewise.
	* libcompat/strsignal.c: Likewise.
	* libcompat/unsetenv.c: Likewise.