@@ -173,7 +173,7 @@ int main(int argc, const char *const *argv) {
   bindtextdomain(PACKAGE, LOCALEDIR);
   textdomain(PACKAGE);
 
-  standard_startup(&ejbuf, NULL, 0, cmdinfos);
+  standard_startup(&ejbuf);
   myopt(&argv, cmdinfos);
 
   if (!cipaction) badusage(_("need an action option"));
