@@ -632,7 +632,8 @@ int main(int argc, const char *const *argv) {
   bindtextdomain(PACKAGE, LOCALEDIR);
   textdomain(PACKAGE);
 
-  standard_startup(&ejbuf, DPKG, 1, cmdinfos);
+  standard_startup(&ejbuf);
+  loadcfgfile(DPKG, cmdinfos);
   myopt(&argv, cmdinfos);
 
   if (!cipaction) badusage(_("need an action option"));
