@@ -193,7 +193,7 @@ main(int argc, const char *const *argv)
 	bindtextdomain(PACKAGE, LOCALEDIR);
 	textdomain(PACKAGE);
 
-	standard_startup(&ejbuf, NULL, 0, cmdinfos);
+	standard_startup(&ejbuf);
 	myopt(&argv, cmdinfos);
 
 	setvbuf(stdout, NULL, _IONBF, 0);
