@@ -1,5 +1,11 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (standard_startup): Do not take prog, loadcfg and
+	cmdinfos as arguments, and do not call loadcfgfile. Fix all callers.
+	* src/main.c: Call loadcfgfile directly.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h: Do not include <myopt.h>.
 	(standard_startup): Do not take argc and argv as arguments, and do
 	not call myopt. Fix all callers.
